# Nyx

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  Nyx_roadmap_v2.md  README.md  deny.toml
.github/workflows/: ci.yml  deploy-demo.yml
docs/: SPRINT_1_SPEC.md  manual.md  phase-b-wasm.md  phase-c-strudel.md  roadmap-deferred.md  roadmap-features.md  roadmap-sonic-character.md  roadmap-v1-shipping.md
examples/sketches/: dubstep_wobble.rs  hello_sine.rs  womp_sketch.rs
nyx-cli/: Cargo.toml
nyx-cli/src/: main.rs  sketch.rs  watcher.rs
nyx-core/: Cargo.toml
nyx-core/src/: alloc_guard.rs  bridge.rs  bus.rs  chorus.rs  compressor.rs  crush.rs  delay.rs  drift.rs  dynamics.rs  engine.rs  filter.rs  flanger.rs  fm.rs  golden.rs  granular.rs  haas.rs  hotswap.rs  inspect.rs  ladder.rs  lib.rs  lofi.rs  mic.rs  midi.rs  midi_native.rs  midi_web.rs  osc.rs  osc_input.rs  param.rs  pitch.rs  pluck.rs  render.rs  reverb.rs  sample.rs  saturation.rs  scope.rs  signal.rs  spectrum.rs  svf.rs  tape.rs  vinyl.rs  (+3 more)
nyx-core/tests/: alloc_guard.rs  bridge.rs  golden_test.rs  phase0.rs  phase11.rs  phase2.rs  phase3.rs  phase6.rs  phase9.rs  sonic_drift.rs  sonic_ladder.rs  sonic_lofi.rs  sonic_saturation.rs  sonic_tape.rs  sonic_vinyl.rs  sprint1_crush.rs  sprint1_delay.rs  sprint1_pluck.rs  sprint1_sampler.rs  sprint1_wav.rs  sprint2_fm.rs  sprint2_reverb.rs  sprint2_stereo.rs  sprint2_svf.rs  sprint2_wavetable.rs  sprint3_bus.rs  sprint3_compressor.rs  sprint3_granular.rs  sprint3_modulation.rs  sprint3_pitch.rs
nyx-examples/: Cargo.toml
nyx-examples/examples/: bevy_spectrum.rs  nannou_scope.rs
nyx-examples/src/: lib.rs
nyx-iced/: Cargo.toml
nyx-iced/examples/: demo.rs  dubstep.rs
nyx-iced/src/: knob.rs  lib.rs  oscilloscope.rs  slider.rs  spectrum_view.rs  theme.rs  xypad.rs
nyx-iced/tests/: phase10.rs
nyx-prelude/: Cargo.toml
nyx-prelude/examples/: chorus_flanger.rs  conditional.rs  dubstep_wobble.rs  echo.rs  fm_bell.rs  generative_melody.rs  granular_cloud.rs  lofi.rs  midi_filter.rs  multi_bus.rs  pitch_tune.rs  pluck.rs  presets_demo.rs  reverb.rs  sampler.rs  sidechain_pump.rs  stereo_sweep.rs  svf_sweep.rs  trance.rs  trance_wav.rs  tron_2_wav.rs  tron_wav.rs  wav_export.rs  wavetable.rs  wind.rs
nyx-prelude/src/: demos.rs  lib.rs
nyx-seq/: Cargo.toml
nyx-seq/src/: automation.rs  chord.rs  clock.rs  envelope.rs  euclid.rs  inst.rs  lib.rs  note.rs  pattern.rs  presets.rs  random.rs  scale.rs  sequence.rs  synth.rs
nyx-seq/tests/: phase4.rs  phase5.rs  phase7.rs  phase8.rs  presets_test.rs  sprint1_probability.rs
nyx-wasm-demo/: Cargo.toml  README.md  index.html
nyx-wasm-demo/src/: lib.rs
