[workspace]
members = [
    "nyx-core",
    "nyx-seq",
    "nyx-iced",
    "nyx-cli",
    "nyx-prelude",
    "nyx-examples",
    "nyx-wasm-demo",
]
# Keep heavy visualisers (nannou, bevy) and the wasm32-only demo out of
# the default build so `cargo build`, `cargo test`, and `cargo clippy`
# stay fast. To target them explicitly:
#     cargo run -p nyx-examples --example nannou_scope --release
#     cd nyx-wasm-demo && wasm-pack build --target web
default-members = [
    "nyx-core",
    "nyx-seq",
    "nyx-iced",
    "nyx-cli",
    "nyx-prelude",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"