[package]
name = "nyx-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["audio", "wav"]
audio = ["dep:cpal"]
midi = ["dep:midir"]
osc = ["dep:rosc"]
wav = ["dep:hound"]

[dependencies]
cpal = { version = "0.17", optional = true }
rtrb = "0.3"
spectrum-analyzer = "1.6"
midir = { version = "0.10", optional = true }
rosc = { version = "0.10", optional = true }
hound = { version = "3", optional = true }
thiserror = "1"

[dev-dependencies]
hound = "3"
