[package]
name = "nyx-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["audio", "wav"]
audio = ["dep:cpal"]
# On native the `midi` feature pulls in `midir`; on wasm32 it pulls in the
# web-sys + wasm-bindgen bindings for the WebMIDI API. Cargo quietly skips
# dep-activations for crates that don't exist in the current `[target]`
# block, so the single `midi` feature Just Works on both platforms.
midi = [
    "dep:midir",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
]
osc = ["dep:rosc"]
wav = ["dep:hound"]

[dependencies]
rtrb = "0.3"
spectrum-analyzer = "1.6"
rosc = { version = "0.10", optional = true }
hound = { version = "3", optional = true }
thiserror = "1"

# Native cpal — picks the OS host (ALSA / CoreAudio / WASAPI) automatically.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = { version = "0.17", optional = true }
midir = { version = "0.10", optional = true }

# WASM cpal — the WebAudio backend is gated behind cpal's `wasm-bindgen`
# feature; without it `cpal::default_host()` silently returns a null
# host and `default_output_device()` gives `None`. The feature pulls in
# wasm-bindgen + the web-sys AudioContext / AudioScheduledSourceNode
# types cpal needs to drive a ScriptProcessorNode (our Option A path —
# see docs/phase-b-wasm.md).
#
# WebMIDI backend — bypasses `midir`'s broken wasm path and talks to
# `navigator.requestMIDIAccess()` directly.
[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.17", optional = true, features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Navigator",
    "MidiAccess",
    "MidiInput",
    "MidiInputMap",
    "MidiMessageEvent",
    "MidiOptions",
    "console",
] }

[dev-dependencies]
hound = "3"
