[package]
name = "nyx-iced"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nyx-core = { path = "../nyx-core" }
iced = { version = "0.13", features = ["canvas", "tokio"] }

[dev-dependencies]
nyx-seq = { path = "../nyx-seq" }

[[example]]
name = "demo"
required-features = []

[[example]]
name = "dubstep"
required-features = []
