[package]
name = "nyx-prelude"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["audio", "wav"]
audio = ["nyx-core/audio"]
midi = ["nyx-core/midi"]
osc = ["nyx-core/osc"]
wav = ["nyx-core/wav"]

[dependencies]
nyx-core = { path = "../nyx-core", default-features = false }
nyx-seq = { path = "../nyx-seq" }

[[example]]
name = "midi_filter"
required-features = ["midi"]
